# TreatmentPlantReport

./: .gitgnore  Pipfile  README  generate_file.py  pyproject.toml  run.py
html/: Alma Viva.html  Alto da Boa Vista.html  Alto da Lagoa.html  Arte Vida.html  Avignon.html  Costa da Luz.html  Edifício Liberty.html  Edifício Lune.html  Fernandes da Costa.html  Gbarbosa - Cruz das Almas.html  Gbarbosa - Serraria.html  Gbarbosa - Tabuleiro.html  Giardino di Mare.html  Hibiscus.html  Horto Boulevard.html  Horto da Serraria.html  Hospital do Coração.html  Jardim Primavera.html  Maceió 1.html  Manguaba Clube.html  Mirante Garden.html  Morada das Artes.html  Novittá.html  Novo Jardim (Offsite).html  Paradise Beach.html  Paraíso das águas.html  Park Shopping 1.html  Park Shopping 2.html  Parque das Gales.html  Pedras da Lagoa.html  Pontal das Marés.html  Recanto das Lagoas.html  Recanto das Saíras.html  Recanto das Árvores.html  Res. Mata das Andorinhas.html  Res. Sierra Park.html  Residencial Allegro.html  Residencial Jardins.html  Residencial Maceió 1.html  Residencial Parque Maceió.html  (+6 more)
relatoriosete/: run.py
relatoriosete/html/:   .html  Alma Viva.html  Alto da Boa Vista.html  Alto da Lagoa.html  Arte Vida.html  Avignon.html  Costa da Luz.html  Edifício Ethos Residence .html  Edifício Ethos Residence.html  Edifício Liberty.html  Edifício Lune.html  Ethos Residence.html  Fernandes da Costa.html  Garbosa - Cruz das Almas.html  Gbarbosa - Cruz das Almas.html  Gbarbosa - Serraria.html  Gbarbosa - Tabuleiro.html  Giardino di Mare.html  (+38 more)
templates/: layout.html  template.html
(+2 files in other folders)
