[tool.poetry]
name = "relatoriosete"
version = "0.1.0"
description = ""
authors = ["lucasuchoa98 <lucasuchoalg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"
pdfkit = "^1.0.0"
pandas = "^2.0.2"
plotly = "^5.15.0"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
